--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "03SmartFontUI-Regular", Helvetica;
+  font-family: "Kaisotai-NextUP B", "Kaisotai-Regular", Helvetica, sans-serif;
   color: #ffffff;
   font-size: 13px;
   text-align: center;
@@ -498,7 +498,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "03SmartFontUI-Regular", Helvetica;
+  font-family: "Kaisotai-NextUP B", "Kaisotai-Regular", Helvetica, sans-serif;
   color: #ffffff;
   font-size: 13px;
   text-align: center;
@@ -516,7 +516,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "03SmartFontUI-Regular", Helvetica;
+  font-family: "Kaisotai-NextUP B", "Kaisotai-Regular", Helvetica, sans-serif;
   color: #ffffff;
   font-size: 13px;
   text-align: center;
